send message script

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "node src"
+    "start": "node src",
+    "send":"node src/sender"
   },
   "dependencies": {
     "dotenv": "^8.2.0",
